# sbrcalendar

./: .gitignore  README.md  calendar_w_token.py  config.json  docker-compose.yml  main.py  pyproject.toml  webScraper.py
docker/: Dockerfile
src/: gcalendar.py  grr.py
